# snake-the-game

./: CMakeLists.txt  snake-the-game.cpp
LoadTextures/: LoadTextures.hpp
Sprites/: Backgraound.hpp  FoodSprite.hpp  HeroSprite.hpp  LifeBarSprite.hpp  OtherSnakes.hpp  SmallSnakesSprite.hpp
